js262/test/language/line-terminators/S7.3_A6_T3.js


/*---
info: |
    Line Terminator cannot be expressed as a Unicode escape sequence
    consisting of six characters, namely \u plus four hexadecimal digits
es5id: 7.3_A6_T3
description: Insert LINE SEPARATOR (U+2028) in var x
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

var\u2028x;
